Bug 65013 - Formatting: heading all characters are meshed on a pile
Summary: Formatting: heading all characters are meshed on a pile
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha1
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:4.1.0.0.beta2 target:4.2.0
Keywords: bibisected, regression
: 65111 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-05-26 18:02 UTC by Phillip Ross
Modified: 2015-12-17 07:14 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
400 page book with lots of formatting. (622.64 KB, application/vnd.oasis.opendocument.text)
2013-05-26 18:02 UTC, Phillip Ross
Details
bisect log (2.97 KB, text/plain)
2013-05-27 11:28 UTC, Jorendc
Details
Screenshot of the issue (72.60 KB, image/png)
2013-05-27 11:42 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Phillip Ross 2013-05-26 18:02:17 UTC
Created attachment 79812 [details]
400 page book with lots of formatting.

Reference: Bug 64979 - File won't open

I see some major formatting issues, which is definitely a regression.
Example: The section titles are cropped (letters are on top of each other).

@Philip: You mind reporting a separate bug report for these formatting issues?

Kind regards,
Joren

Probably Styles & Formatting, Heading 1

Phil
Comment 1 Cor Nouws 2013-05-26 18:27:33 UTC
confirm on Ubuntu.
thanks for reporting!
Comment 2 Jorendc 2013-05-27 11:28:14 UTC
Created attachment 79843 [details]
bisect log
Comment 4 Jorendc 2013-05-27 11:34:38 UTC
@Luboš: Am I right this could be the one that introduce this behavior: http://cgit.freedesktop.org/libreoffice/core/commit/?id=f22006dc6ac34a35a060e15466cf6b2d2058617d ?
Comment 5 Jorendc 2013-05-27 11:40:08 UTC
@Noel: or this one http://cgit.freedesktop.org/libreoffice/core/commit/?id=a43cc9ec8dde4f311bcf8ff96e6a26d56b2abdcf ?

These commits looks 'possibly related' to this issue in the bisect range.

Thanks for your time,
Joren
Comment 6 Jorendc 2013-05-27 11:42:34 UTC
Created attachment 79844 [details]
Screenshot of the issue
Comment 7 Noel Power 2013-05-27 13:05:48 UTC
(In reply to comment #5)
> @Noel: or this one
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=a43cc9ec8dde4f311bcf8ff96e6a26d56b2abdcf ?
> 
> These commits looks 'possibly related' to this issue in the bisect range.
> 
I doubt this patch has anything to do with formatting in an odt document
Comment 8 Luboš Luňák 2013-05-27 14:05:27 UTC
(In reply to comment #4)
> @Luboš: Am I right this could be the one that introduce this behavior:
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=f22006dc6ac34a35a060e15466cf6b2d2058617d ?

My couple-of-days-old master build has this commit and I do not see the problem.
Comment 9 Michael Stahl (allotropia) 2013-05-29 11:32:44 UTC
was introduced by:

commit f22006dc6ac34a35a060e15466cf6b2d2058617d
Author: Luboš Luňák <l.lunak@suse.cz>
Date:   Wed Apr 17 18:52:28 2013 +0200

    fix stupid over-optimization
Comment 10 Luboš Luňák 2013-05-29 14:41:10 UTC
(In reply to comment #9)
> was introduced by:
> 
> commit f22006dc6ac34a35a060e15466cf6b2d2058617d
> Author: Luboš Luňák <l.lunak@suse.cz>
> Date:   Wed Apr 17 18:52:28 2013 +0200
> 
>     fix stupid over-optimization

If that is the case, then there's another piece of code that needs a fix like 6e6b028164176e39219dccbe1b84380b10b6e64f to use SwDrawTextInfo without ugly hacks.
Comment 11 Luboš Luňák 2013-05-31 15:58:05 UTC
Fixed.
Comment 12 Commit Notification 2013-05-31 16:00:35 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c7880eff4d1ae4112ce786cff7f141a6f69c475d&h=libreoffice-4-1

audit incorrect uses of SwDrawTextInfo (fdo#65013)


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2013-05-31 16:01:30 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ff6645da1c27990a223f05185acc1d077eaf96e6

audit incorrect uses of SwDrawTextInfo (fdo#65013)



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Jacques Guilleron 2013-06-07 16:27:16 UTC
*** Bug 65111 has been marked as a duplicate of this bug. ***
Comment 15 Robinson Tryon (qubit) 2015-12-17 07:14:55 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]