audit incorrect uses of SwDrawTextInfo (fdo#65013)

f22006dc6ac34a35a060e15466cf6b2d2058617d stopped SwDrawTextInfo using
pointers to outside data (which lead to various uses of variables
that have already gone out of scope). This commit (hopefully) fixes
all uses of the clash that relied on the fact that the underlying
data changed behind the scenes.

Change-Id: I820f13a90b9d1a8055f8e317ca8debc969c39bc0